// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MembrePage /> renders an error if loading failed 1`] = `
<div
  class="Membre"
>
  <p>
    Oops! Failed to load data.
  </p>
</div>
`;

exports[`<MembrePage /> renders the <Info /> if loading was successful 1`] = `
<div
  class="Membre"
>
  <div
    class="MembreCard"
  >
    <h4>
      Membre Info
    </h4>
    <ul>
      <li>
        Prénom: 
        Amélie
      </li>
      <li>
        Nom: 
        Aupeix
      </li>
    </ul>
  </div>
</div>
`;

exports[`<MembrePage /> renders the loading status if data invalid 1`] = `
<div
  class="Membre"
>
  <p>
    Oops! Failed to load data.
  </p>
</div>
`;

exports[`<MembrePage /> renders the loading status if requesting data 1`] = `
<div
  class="Membre"
>
  <p>
    Loading...
  </p>
</div>
`;
